REFACTOR:  ADD ALL --REV2